「いいね」ボタンなどの行のクラス名が変わったので追加

--- a/TweetDeck_プレビュー_カスタムcss.css
+++ b/TweetDeck_プレビュー_カスタムcss.css
@@ -25,6 +25,12 @@ div.css-1dbjc4n.r-1ta3fxp.r-18u37iz.r-1wtj0ep.r-1s2bzr4.r-1mdbhws {
     margin-top: 5px;
     display: none;
 }
+/* (2023/07/21)「いいね」ボタンなどの行 */
+div.css-1dbjc4n.r-1kbdv8c.r-18u37iz.r-1wtj0ep.r-1s2bzr4.r-1mdbhws {
+    margin-top: 5px;
+    display: none;
+}
+
 
 /* 「このスレッドを表示」の行 1 */
 div.css-901oao.r-1cvl2hr.r-1tl8opc.r-a023e6.r-16dba41.r-rjixqe.r-bcqeeo.r-5njf8e.r-qvutc0 {
